--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 color-eyre = "0.6.3"
 crossterm = "0.28.1"
+oauth2 = "4.4.2"
 ratatui = "0.29.0"
+reqwest = { version = "0.12.9" , features = ["json", "blocking"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
