--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,9 @@
 name: Build and Release
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
-
+  pull_request:
+    branches:
+      - main
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
