--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,7 @@ on:
   pull_request:
     branches:
       - main
+
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
@@ -25,6 +26,20 @@ jobs:
     - name: Build project
       run: cargo build --release
 
+    - name: Verify release binary exists
+      run: ls -l target/release/rust-tui
+
+    - name: Create GitHub Release
+      id: create_release
+      uses: actions/create-release@v1
+      with:
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        draft: false
+        prerelease: false
+        body: "Automated release for version ${{ github.ref_name }}"
+        token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Upload release asset
       uses: actions/upload-release-asset@v1
       with:
@@ -32,15 +47,4 @@ jobs:
         asset_path: target/release/rust-tui
         asset_name: rust-tui
         asset_content_type: application/octet-stream
-
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-        body: "Automated release for version ${{ github.ref }}"
-        token: ${{ secrets.GITHUB_TOKEN }}
 
