Update: GitHub Actionsの修正

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,9 +10,7 @@ on:
     branches:
       - main
 
-permissions: 
-  - write-all
-  - read-all
+permissions: write-all
 
 jobs:
   build-and-release:
