--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,11 +26,12 @@ jobs:
     - name: Verify release binary exists
       run: ls -l target/release/rust-tui
 
+    - name: Debug github.ref_name
+      run: echo "Tag name: ${{ github.ref_name }}"
+
     - name: Create GitHub Release
       id: create_release
       uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref_name }}
         release_name: Release ${{ github.ref_name }}
