--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,18 +26,19 @@ jobs:
     - name: Verify release binary exists
       run: ls -l target/release/rust-tui
 
-    - name: Debug github.ref_name
-      run: echo "Tag name: ${{ github.ref_name }}"
+    - name: Extract tag name
+      id: extract_tag
+      run: echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
     - name: Create GitHub Release
       id: create_release
       uses: actions/create-release@v1
       with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
+        tag_name: ${{ env.TAG_NAME }}
+        release_name: Release ${{ env.TAG_NAME }}
         draft: false
         prerelease: false
-        body: "Automated release for version ${{ github.ref_name }}"
+        body: "Automated release for version ${{ env.TAG_NAME }}"
 
     - name: Upload release asset
       uses: actions/upload-release-asset@v1
